# feelings.blackfriday

./: .gitignore  CHANGELOG.md  LICENSE  README.md  feelings.cabal  package.yaml  stack.yaml
css/: css.css.css  reset.css
src/: Batteries.hs  Main.hs
src/Feelings/: Batteries.hs  Types.hs
