Name:                feelings
Version:             1.0
Synopsis:            https://feelings.blackfriday
Description:         Project Description Here
License:             MIT
Author:              Hao Lian
Maintainer:          hi@haolian.org
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable feelings
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
                         base                      >= 4     && < 5
                , MonadCatchIO-transformers >= 0.2.1 && < 0.4
                , aeson >= 0.8.0.2
                , base-prelude
                , bytestring                >= 0.9.1 && < 0.11
                , lucid
                , mtl                       >= 2     && < 3
                , snap-core                 >= 0.9   && < 0.10
                , snap-server               >= 0.9   && < 0.10
                , suspend >= 0.2.0.0
                , text >= 1.1.1.3
                , time >= 1.4.2
                , timers >= 0.2.0.2


  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-unused-do-bind
