Name:                feelings
Version:             1.0
Synopsis:            https://feelings.blackfriday
Description:         one-stop shop for the feelings friday social network
License:             MIT
Author:              Hao Lian
Maintainer:          hi@haolian.org
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable feelings
  hs-source-dirs: src
  main-is: Main.hs
  Build-depends:  MonadCatchIO-transformers
                , aeson
                , base
                , base-prelude
                , bytestring
                , directory
                , lucid
                , mtl
                , snap-core
                , snap-server
                , suspend
                , text
                , time
                , timers
                , tz
